--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.58.3",
     "react-native-elements": "^1.0.0",
     "react-native-gesture-handler": "^1.0.15",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-slideshow": "^1.0.1",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.1.2"
