--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.58.3",
     "react-native-camera": "^1.10.2",
     "react-native-elements": "^1.0.0",
+    "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.0.15",
     "react-native-simple-radio-button": "^2.7.3",
     "react-native-slideshow": "^1.0.1",
